<resources>
    <string name="app_name" translatable="false">OrganizaiApp</string>
    <string name="nome_app">OrganizAI</string>
    <string name="Bom_Dia"> Bom dia, Meu amigo!</string>
    <string name="Minha_conta"> MINHAS CONTAS</string>
    <string name="Saldo"> SALDO ATUAL  R$: 13.000,00</string>
    <string name="Contas"> CONTAS CADASTRADAS </string>
    <string name="Nome_da_Conta"> Nome Banco </string>
    <string name="Saldo_da_Conta"> Saldo Atual </string>
    <string name="Valor_da_Conta"> R$ 3.000,00 </string>
    <string name="todo">TODO</string>
    <string name="todo1">TODO</string>
    <string name="todo2">TODO</string>
    <string name="todo3">TODO</string>
    <string name="configura_es">Configurações</string>
    <string name="voltar">voltar</string>
    <string name="geral">Geral</string>
    <string name="texttema">Tema</string>
    <string name="divisao">_________________________________________________________________</string>
    <string name="divisoria">_______________________________________________________________</string>
    <string name="divisoria2">__________________________________________________________</string>
    <string name="divisoria3">__________________________________________________________</string>
    <string name="alertas_e_notifica_es">Alertas e Notificações</string>
    <string name="seguran_a">Segurança</string>
    <string name="geral2">Geral</string>
    <string name="tema">Tema</string>
    <string name="Alterar_dados">Alterar dados</string>
    <string name="Alterar_senha">Alterar Senha</string>
    <string name="senha_app">Definir Senha de Acesso ao App</string>
    <string name="Alterar_email">Ativar notificações</string>


</resources>