<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#609F13"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:background="@drawable/header"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/foto_usuarioctb"
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.954"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.488"
            app:shapeAppearanceOverlay="@style/RoundedImageView"
            app:srcCompat="@color/black" />

        <TextView
            android:id="@+id/textMinhaconta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/saira_bold"
            android:text="@string/Minha_conta"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/iconvoltar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:background="@drawable/baseline_arrow_back_ios_new_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/textMinhaconta"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textconfigeral"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/saira_bold"
        android:text="@string/geral2"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.102"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header"
        app:layout_constraintVertical_bias="0.012"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/infoconfig"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/contabacinfo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header"
        app:layout_constraintVertical_bias="0.059" />

    <TextView
        android:id="@+id/textconfisegurança"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/saira_bold"
        android:text="@string/seguran_a"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.068"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header"
        app:layout_constraintVertical_bias="0.219"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/infoconfigseguranca"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/contabacinfo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header"
        app:layout_constraintVertical_bias="0.301"
        tools:ignore="DuplicateIds" />

    <TextView
        android:id="@+id/infoconfigalerta"
        android:layout_width="match_parent"
        android:layout_height="67dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/contabacinfo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.542"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header"
        app:layout_constraintVertical_bias="0.525" />

    <TextView
        android:id="@+id/textalertaenotificacoes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/saira_bold"
        android:text="@string/alertas_e_notifica_es"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.107"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header"
        app:layout_constraintVertical_bias="0.441"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/saira_bold"
        android:text="@string/divisoria"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/infoconfig"
        app:layout_constraintEnd_toEndOf="@+id/infoconfig"
        app:layout_constraintStart_toStartOf="@+id/infoconfig"
        app:layout_constraintTop_toTopOf="@+id/infoconfig" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/saira_bold"
        android:text="@string/divisoria2"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/main"
        app:layout_constraintVertical_bias="0.408" />

    <TextView
        android:id="@+id/texttema"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/saira_bold"
        android:text="@string/tema"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/infoconfig"
        app:layout_constraintEnd_toEndOf="@+id/infoconfig"
        app:layout_constraintHorizontal_bias="0.047"
        app:layout_constraintStart_toStartOf="@+id/infoconfig"
        app:layout_constraintTop_toTopOf="@+id/infoconfig"
        app:layout_constraintVertical_bias="0.378" />

    <TextView
        android:id="@+id/textAlterardados"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/saira_bold"
        android:text="@string/Alterar_dados"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/infoconfig"
        app:layout_constraintEnd_toEndOf="@+id/infoconfig"
        app:layout_constraintHorizontal_bias="0.06"
        app:layout_constraintStart_toStartOf="@+id/infoconfig"
        app:layout_constraintTop_toTopOf="@+id/infoconfig"
        app:layout_constraintVertical_bias="0.824" />

    <TextView
        android:id="@+id/textsenhaLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/saira_bold"
        android:text="@string/Alterar_senha"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/infoconfigseguranca"
        app:layout_constraintEnd_toEndOf="@+id/infoconfigseguranca"
        app:layout_constraintHorizontal_bias="0.052"
        app:layout_constraintStart_toStartOf="@+id/infoconfigseguranca"
        app:layout_constraintTop_toTopOf="@+id/infoconfigseguranca"
        app:layout_constraintVertical_bias="0.395" />

    <TextView
        android:id="@+id/textsenhaapp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/saira_bold"
        android:text="@string/senha_app"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/infoconfigseguranca"
        app:layout_constraintEnd_toEndOf="@+id/infoconfigseguranca"
        app:layout_constraintHorizontal_bias="0.098"
        app:layout_constraintStart_toStartOf="@+id/infoconfigseguranca"
        app:layout_constraintTop_toTopOf="@+id/infoconfigseguranca"
        app:layout_constraintVertical_bias="0.839" />

    <TextView
        android:id="@+id/textnotficaçoes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/saira_bold"
        android:text="@string/Alterar_email"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/infoconfigalerta"
        app:layout_constraintEnd_toEndOf="@+id/infoconfigalerta"
        app:layout_constraintHorizontal_bias="0.053"
        app:layout_constraintStart_toStartOf="@+id/infoconfigalerta"
        app:layout_constraintTop_toTopOf="@+id/infoconfigalerta"
        app:layout_constraintVertical_bias="0.52" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/infoconfigalerta"
        app:layout_constraintEnd_toEndOf="@+id/infoconfigalerta"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="@+id/infoconfigalerta"
        app:layout_constraintTop_toTopOf="@+id/infoconfigalerta" />


</androidx.constraintlayout.widget.ConstraintLayout>
